# public/swagger.json
@@ -395,6 +395,39 @@
 						}
 					}
 				]
+			},
+			"delete": {
+				"operationId": "DeleteJobPost",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IJobPost"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Job posts"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/api/auth/signup": {
